edit page to edit modal

--- a/frontend/src/styles/AdminLayout/RowWiseTasks/AllRowWiseTasks.module.css
+++ b/frontend/src/styles/AdminLayout/RowWiseTasks/AllRowWiseTasks.module.css
@@ -50,6 +50,7 @@ p.taskHeaderItem{
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: break-word;
+    cursor: pointer;
     
 }
 
