--- a/frontend/src/styles/login.module.css
+++ b/frontend/src/styles/login.module.css
@@ -4,6 +4,15 @@
 }
 
 
+/* .bgaquagradient {
+  background: linear-gradient(135deg, #ffe2e6, #f7d9ff);
+  color: #4c004c;
+} */
+
+
+
+
+
 /* .loginPhoto{
     width: 100%;
     height: 100%;
